[package]
name = "lma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
ratatui = { version = "0.21.0", features = ["all-widgets"] }
crossterm = "0.26"
reqwest = "0.11"
tokio = { version = "1.28.2", features = ["full"] }
lib-mal = { git = "https://github.com/FakeMichau/lib-mal.git" }