[package]
name = "lma_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.29.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.28.2", features = ["macros"] }
time = "0.3"
lib-mal = { git = "https://github.com/FakeMichau/lib-mal.git" }
serde = "1.0"
async-trait = "0.1.68"