[package]
name = "lma_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.35", features = ["macros"] }
time = "0.3"
lib-mal = { git = "https://github.com/FakeMichau/lib-mal.git" }
serde = "1.0"
