[package]
name = "lma_tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lma"
path = "src/main.rs"

[dependencies]
ratatui = "0.21.0"
crossterm = { version = "0.26", features = ["serde"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
directories = "5.0"
serde = "1.0"
toml = "0.7"
lma_lib = { path = "../lma_lib" }
open = "5"