[package]
name = "lma_tui"
version = "1.0.0"
edition = "2021"

[features]
portable = []

[[bin]]
name = "lma"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.22.0" }
crossterm = { version = "0.26", features = ["serde"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
directories = "5.0"
serde = { version = "1.0",  default-features = false }
toml = "0.7"
lma_lib = { path = "../lma_lib" }
open = "5"